LP/Python/S3/E1_expr_YO/exprs.g4
grammar exprs;

root
    : expr
    ;
    
expr
    : <assoc=right> expr '^' expr
    | expr '/' expr
    | expr '*' expr 
    | expr '-' expr
    | expr '+' expr
    | INT
    ;

INT
    : [0-9]+
    ;

WS
    : [ \t\n\r]+ -> skip
    ;
